# stablecoin-cngn

./: .env.example  .gitignore  LICENSE  README.md  hardhat.config.js  package-lock.json  package.json  safe-contracts.json  tronbox.js  truffle-config.js
.openzeppelin/: goerli.json  polygon-mumbai.json  unknown-97.json
cache/: solidity-files-cache.json  validations.json
canton-contract/: Makefile  Readme.md  daml.yaml
cngn-solana/: .gitignore
cngn-solana-old/: mintKeypair.json
cngn-solana-old/programs/cngn/: Cargo.toml
contracts/: Cngn2.sol  ERC2771ContextProxyable.sol  IOperations.sol  IOperations2.sol  Multisig.sol  Operations.sol  Operations2.sol  ProxyAdmin.sol  TestContract.sol  cngn.sol  forwarder.sol
evm/: README.md  foundry.toml
evm-contracts/: SafeImports.sol  cngn3.sol
scripts/: README.md  checkAdminContractProxyOwner.js  checkAdminImpl.js  checkInitParams.js  checkOwner.js  checkProxyAdmin.js  checkProxyAdminReal.js  deploy-gnosis.js  deploy-safe-contracts.js  deploy.js  deployAdmin1Logic.js  deployAdmin1Proxy.js  deployAdmin2Impl.js  deployCngn1Logic.js  deployGreeter.js  (+34 more)
solana-contract/programs/cngn/: Cargo.toml
solana-contract/programs/cngn/src/: errors.rs  events.rs  lib.rs
solana-contract/programs/cngn/src/instructions/: admin.rs  burn.rs  forwarder.rs  initialize.rs  mint.rs  mod.rs  multisig.rs  pause.rs  redemption.rs  transfer.rs  transfer_hook.rs
solana-contract/programs/cngn/src/state/: blacklist.rs  can_forward.rs  can_mint.rs  internal_whitelist.rs  mint_auth.rs  mod.rs  multisig.rs  token_config.rs  trusted_contracts.rs
(+264 files in other folders)
