[package]
name = "cngn"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cngn"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []  # Add this line

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"],default-features = false }
anchor-spl ={ version="0.30.1"}
arrayref = "0.3.7"
bincode = "1.3.3" 
hex = "0.4.3"
mpl-token-metadata =  "5.1.0"
