[package]
name = "cngn"
version = "0.1.0"
description = "Created with Anchor by Ayoseun"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cngn"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []  # Add this line

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed","interface-instructions"]}
anchor-spl ={ version="0.32.1"}
solana-program = "2.2.0"
arrayref = "0.3.7"
bincode = "1.3.3" 
hex = "0.4.3"

spl-tlv-account-resolution = "0.10.0"
spl-transfer-hook-interface = "0.10.0"
sha2 = "0.10.9"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
